--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet"href="./styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
-        <br>
-        <br>
-        <a href="./recipes/plov.html">Plov</a>
-        <br>
-        <br>
-        <a href="./recipes/quick_quesadillas.html">Quick Quesadillas</a>
+        <div ID="recipes">
+            <p>Odin Recipes</p>
+        </div>
+        <div ID="buttons">
+           <button class="lasagna"><a href="./recipes/lasagna.html">Lasagna</a></button> 
+           <button class="plov"><a href="./recipes/plov.html">Plov</a></button>
+           <button class="tortilla"><a href="./recipes/quick_quesadillas.html">Quick Quesadillas</a></button>
+        </div>
+        
     </body>
 </html>
